# o2cloud_gateway_webdav

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docker/: entrypoint.sh
scripts/: cleanup_test_orphans.py
src/o2gateway/: main.py  settings.py
src/o2gateway/admin/: router.py
src/o2gateway/cloud/: __init__.py  base.py  simulated.py
src/o2gateway/o2/: __init__.py  api.py  login.py  movistar.py  session.py  store.py
src/o2gateway/operations/: errors.py  ids.py  logging.py
src/o2gateway/persistence/: __init__.py  db.py  metadata_cache.py
src/o2gateway/security/: __init__.py  auth.py  session_crypto.py
src/o2gateway/templates/: dashboard.html  login.html
src/o2gateway/webdav/: __init__.py  locks.py  parsing.py  router.py  xml.py
tests/: test_o2_overlay_store.py  test_o2_recent_upload_cache.py  test_paths.py  test_simulated_store.py  test_xml.py
